# mpd-s

./: .gitignore  README.md  pyproject.toml
mpd/losses/: gaussian_diffusion_loss.py
mpd/models/: __init__.py
mpd/models/diffusion_models/: diffusion_model_base.py  helpers.py  sample_functions.py  sbm_likelihood.py  temporal_unet.py
mpd/models/generic/: __init__.py  mlp_model.py  no_model.py
mpd/models/layers/: __init__.py  equiv_layers.py  identity.py  layers.py  layers_attention.py
mpd_s/: __init__.py  config.py  torch_timer.py  utils.py  visualizer.py
mpd_s/dataset/: data_transform.py  dataset.py  filtering.py
mpd_s/model/: generative_models.py  temporal_unet.py
mpd_s/planning/: costs.py  factors.py  guide.py  inference.py  inference_config.py  metrics.py
mpd_s/planning/planners/: classical_planner.py  gpmp2.py  gradient_optimization.py  hybrid_planner.py  rrt_connect.py
mpd_s/train/: logs.py  trainer.py
mpd_s/universe/: environments.py  grid_map_sdf.py  primitives.py  robot.py
scripts/: generate_data.py  inference.py  train.py
